--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -2,7 +2,7 @@
 Footer Area CSS
 =================================================*/
 .footer-area {
-  background-image: url(../../assets/images/footer-bg.jpg);
+  background-image: url(../../assets/images/footer-bg.webp);
   background-position: center center;
   background-size: cover;
   background-repeat: no-repeat;
