--- a/assets/css/responsive.scss
+++ b/assets/css/responsive.scss
@@ -429,7 +429,7 @@
     }
 
     // Appointment Area CSS
-    .appointment-area-with-bg-image {
+    .appointment-area-with- {
         padding-top: 50px;
         padding-bottom: 50px;
 
@@ -1062,7 +1062,7 @@
     }
 
     // Appointment Area CSS
-    .appointment-area-with-bg-image {
+    .appointment-area-with- {
         padding-top: 70px;
         padding-bottom: 70px;
 
