--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1269,7 +1269,7 @@ Services Area CSS
             }
         }
     }
-    &.bg-image {
+    &. {
         position: relative;
         z-index: 1;
 
@@ -2165,7 +2165,7 @@ Team Area CSS
 /*================================================
 Appointment Area CSS
 =================================================*/
-.appointment-area-with-bg-image {
+.appointment-area-with- {
     background-image: url(../../assets/images/appointment/bg-1.jpg);
     background-position: center center;
     background-size: cover;
