--- a/assets/css/remixicon.css
+++ b/assets/css/remixicon.css
@@ -22,6 +22,7 @@
 [class^="ri-"], [class*=" ri-"] {
   font-family: 'remixicon' !important;
   font-style: normal;
+  font-display:swap;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
